RESOLVED FIXED192539
stroke-dasharray applied to markers and cannot be overriden by ="0"
https://bugs.webkit.org/show_bug.cgi?id=192539
Summary stroke-dasharray applied to markers and cannot be overriden by ="0"
Peter Holbein Kapoun
Reported 2018-12-09 04:01:38 PST
Created attachment 356916 [details] Testcase Unlike in other browser engines the stroke-dasharray of an element gets applied onto the markers referenced by it and additionally the marker cannot be made to not be dashed by explicitly setting stroke-dasharray of the marker to "0". Compare the rendering of the attached testcase in different rendering engines.
Attachments
Testcase (513 bytes, image/svg+xml)
2018-12-09 04:01 PST, Peter Holbein Kapoun
no flags
Rendering in Firefox and Chrome (6.17 KB, image/png)
2018-12-09 04:02 PST, Peter Holbein Kapoun
no flags
Rendering in Safari (5.44 KB, image/png)
2018-12-09 04:02 PST, Peter Holbein Kapoun
no flags
Peter Holbein Kapoun
Comment 1 2018-12-09 04:02:19 PST
Created attachment 356917 [details] Rendering in Firefox and Chrome
Peter Holbein Kapoun
Comment 2 2018-12-09 04:02:42 PST
Created attachment 356918 [details] Rendering in Safari
Radar WebKit Bug Importer
Comment 3 2018-12-10 14:04:52 PST
Ahmad Saleem
Comment 4 2022-08-13 05:14:59 PDT
I am able to reproduce this bug in Safari 15.6 and Safari Technology Preview 151 using attached test case and triangle is stroke dash-array and not solid like other browsers (Chrome Canary 106 and Firefox Nightly 105). Thanks!
Roman Bruckner
Comment 5 2024-09-20 04:31:34 PDT
It's still reproducible in Safari 17. Using `stroke-width="1,0"` seems to work.See https://jsfiddle.net/kumilingus/mva9egsc/.
Ahmad Saleem
Comment 6 2025-12-29 21:13:46 PST
EWS
Comment 7 2026-01-01 09:46:41 PST
Committed 305042@main (c948de8983c3): <https://commits.webkit.org/305042@main> Reviewed commits have been landed. Closing PR #55932 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.