Source/WebCore/rendering/svg/RenderSVGPath.cpp
@@ -234,6 +234,7 @@ void RenderSVGPath::drawMarkers(PaintInfo& paintInfo)
             auto& context = paintInfo.context();
             GraphicsContextStateSaver stateSaver(context);
 
+            context.setLineDash(DashArray(), 0);
             auto contentTransform = marker->markerTransformation(markerPosition.origin, markerPosition.angle, strokeWidth);
             marker->checkedLayer()->paintSVGResourceLayer(context, contentTransform);
         }
